--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.tiptime"
+        vectorDrawables.useSupportLibrary = true
         minSdk 21
         targetSdk 32
         versionCode 1
